# sample-fast-api

./: .env.template  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  routes.py  schemas.py  utils.py
app/services/: agentic_calculation.py  langraph_agent_researcher.py  langraph_agentic_calculation.py  langraph_agentic_calculation_enhanced.py  llm_service.py  llm_watsonx.py
app/services/tools/: calculation_tools copy.py  calculation_tools.py  prebuilt_tools.py  tool_input.json
docs/: index.md
search/: search_index.json
