[project]
name = "sample-fast-api"
version = "0.1.0"
description = "sample GenAI FastAPI Project"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "aiosqlite==0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "arize-otel>=0.8.1",
    "arize-phoenix>=9.5.0",
    "arize-phoenix-otel>=0.9.2",
    "asyncer==0.0.8",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dataclasses-json==0.6.7",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "dydantic==0.0.8",
    "email-validator==2.2.0",
    "fast-depends==2.4.12",
    "fastapi==0.115.7",
    "frozenlist==1.5.0",
    "geojson==2.5.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "ibm-cos-sdk==2.13.6",
    "ibm-cos-sdk-core==2.13.6",
    "ibm-cos-sdk-s3transfer==2.13.6",
    "ibm-watsonx-ai==1.2.6",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jiter==0.8.2",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.17",
    "langchain-community==0.3.16",
    "langchain-core==0.3.33",
    "langchain-ibm==0.3.5",
    "langchain-openai==0.3.3",
    "langchain-text-splitters==0.3.5",
    "langgraph==0.2.69",
    "langgraph-checkpoint==2.0.10",
    "langgraph-checkpoint-sqlite==2.0.3",
    "langgraph-cli==0.1.70",
    "langgraph-sdk==0.1.51",
    "langsmith==0.3.3",
    "lomond==0.3.3",
    "marshmallow==3.26.0",
    "motor==3.7.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "numpy==1.26.4",
    "openai==1.60.2",
    "openinference-instrumentation-langchain>=0.1.42",
    "openinference-instrumentation-openai>=0.1.28",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.1.4",
    "propcache==0.2.1",
    "pyautogen==0.7.3",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pymongo==4.11",
    "pyowm==3.3.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.2",
    "requests-toolbelt==1.0.0",
    "setuptools>=75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "starlette==0.45.3",
    "tabulate==0.9.0",
    "tavily-python==0.5.0",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "tiktoken==0.8.0",
    "tqdm==4.67.1",
    "trustcall==0.0.34",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "websockets==14.2",
    "wikipedia==1.4.0",
    "yarl==1.18.3",
    "youtube-search==2.1.2",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.3",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
